src/objects/Renovacion__c.object
<CustomObject>
    <fields>
        <fullName>ConMesesSinIntereses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si tiene CON MESES SIN INTERESES seleccionar.</inlineHelpText>
        <label>CON MESES SIN INTERESES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Condescuento__c</fullName>
        <formula>IF(Status__c = TRUE, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Con descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContadorDia__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contador de día</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correo_Renovacion__c</fullName>
        <label>Correo Renovacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No enviado</fullName>
                    <default>true</default>
                    <label>No enviado</label>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>No abierto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CuarentaDiasCumplidos_del__c</fullName>
        <formula>NOW() -  DATETIMEVALUE(Fecha_de_renovacion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>40 días cumplidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detalledescuentook__c</fullName>
        <label>Detalle de descuento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnviadoMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviado a MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnviarEncuestaRenovacionInforme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enviar Encuesta Renovación Informe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnvioMKTRenovacion_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encuesta  MKT con éxito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estatus_poliza__c</fullName>
        <formula>TEXT (Poliza__r.ESTATUS_CLIPERT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estatus póliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaRenovacion40_del_del__c</fullName>
        <formula>Fecha_de_renovacion__c + 40</formula>
        <label>Fecha Renovación más 40 días</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_renovacion__c</fullName>
        <label>Fecha de renovación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdExterno__c</fullName>
        <externalId>true</externalId>
        <label>Id Externo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inicio_Vigencia__c</fullName>
        <label>Inicio Vigencia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_anio__c</fullName>
        <formula>TEXT(YEAR( Inicio_Vigencia__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia anio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_dia__c</fullName>
        <formula>DAY( Inicio_Vigencia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia dia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inicio_vigencia_mes__c</fullName>
        <formula>CASE( MONTH(Inicio_Vigencia__c),
1, &quot;Enero&quot;,
2, &quot;Febrero&quot;,
3, &quot;Marzo&quot;,
4, &quot;Abril&quot;,
5, &quot;Mayo&quot;,
6, &quot;Junio&quot;,
7, &quot;Julio&quot;,
8, &quot;Agosto&quot;,
9, &quot;Septiembre&quot;,
10, &quot;Octubre&quot;,
11, &quot;Noviembre&quot;,
12, &quot;Marzo&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inicio vigencia mes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Poliza__c</fullName>
        <formula>Poliza__r.NumerodePoliza__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero Poliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrigenPoliza__c</fullName>
        <formula>TEXT (  Poliza__r.AVX_CampanaOrigen__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origen de la póliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDF_Poliza__c</fullName>
        <formula>&quot;https://www.wibe.com/cotizadores/api/common/documentos/poliza/renovacion?poliza=&quot; +  Numero_Poliza__c  + &quot;&amp;producto=2008&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Poliza</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pago__c</fullName>
        <label>Pago</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <label>Póliza</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Renovaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RecibioCorreoMesesSinIntereses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recibió correo de MESES SIN INTERES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenovacionID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renovacion ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SinMesesSinIntereses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si tiene SIN MESES SIN INTERESES seleccionar.</inlineHelpText>
        <label>SIN MESES SIN INTERESES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sindescuento__c</fullName>
        <formula>IF(Status__c = false, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sin descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submarca__c</fullName>
        <label>Submarca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>anio__c</fullName>
        <label>anio</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caractteri__c</fullName>
        <label>caractteri</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cdescri126__c</fullName>
        <label>cdescri126</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdescri128__c</fullName>
        <label>cdescri128</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdescri130__c</fullName>
        <label>cdescri130</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport127__c</fullName>
        <label>cimport127_a</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport127_b__c</fullName>
        <label>cimport127_b</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport129__c</fullName>
        <label>cimport129</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cimport131__c</fullName>
        <label>cimport131</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cmodelo29__c</fullName>
        <label>cmodelo29</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dia__c</fullName>
        <label>dia</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mes__c</fullName>
        <label>mes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nombre__c</fullName>
        <label>nombre</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url1__c</fullName>
        <label>url1</label>
        <type>Url</type>
    </fields>
    <label>Renovacion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fecha_de_renovacion__c</columns>
        <columns>Poliza__c</columns>
        <columns>Estatus_poliza__c</columns>
        <columns>Pago__c</columns>
        <columns>Plan__c</columns>
        <columns>Marca__c</columns>
        <columns>Submarca__c</columns>
        <columns>Correo_Renovacion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>HOY</fullName>
        <columns>NAME</columns>
        <columns>Fecha_de_renovacion__c</columns>
        <columns>Numero_Poliza__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>HOY</label>
        <sharedTo>
            <group>Administradores</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>REN-{000000}</displayFormat>
        <label>Nombre de Renovación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renovaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>